--- a/Code/Common/src/CMakeLists.txt
+++ b/Code/Common/src/CMakeLists.txt
@@ -33,10 +33,7 @@ set ( SimpleITKCommonSource
 
 set(use_itk_modules ITKCommon ITKImageCompose ITKImageIntensity
   ITKLabelMap ITKTransform ITKIOTransformBase ITKDisplacementField )
-if (GenericLabelInterpolator IN_LIST ITK_MODULES_ENABLED)
-  list(APPEND use_itk_modules GenericLabelInterpolator)
-endif()
-find_package(ITK COMPONENTS  REQUIRED ${use_itk_modules} )
+find_package(ITK COMPONENTS ${use_itk_modules}  REQUIRED)
 
 add_library ( SimpleITKCommon ${SimpleITKCommonSource} ${SimpleITKAncillarySource} )
 sitk_target_use_itk (SimpleITKCommon PRIVATE ${use_itk_modules} )
