--- a/Testing/CI/Azure/templates/package-linux-job.yml
+++ b/Testing/CI/Azure/templates/package-linux-job.yml
@@ -1,6 +1,6 @@
 parameters:
   DOCKERFILE: Dockerfile-2014-x86_64
-  PYTHON_VERSIONS: "cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311"
+  PYTHON_VERSIONS: "cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311 cp312-cp312"
   BUILD_CSHARP: 0
 
 jobs:
