--- a/Testing/CI/Azure/templates/package-mac-job.yml
+++ b/Testing/CI/Azure/templates/package-mac-job.yml
@@ -94,6 +94,14 @@ jobs:
       - task: UsePythonVersion@0
         displayName: Enable Python
         inputs:
+          versionSpec: '3.12'
+          architecture: 'x64'
+      - bash: ${BUILD_SOURCESDIRECTORY}/Testing/CI/Azure/scripts/mac_build_python.sh
+        displayName: Build Python 312
+        continueOnError: true
+      - task: UsePythonVersion@0
+        displayName: Enable Python
+        inputs:
           versionSpec: '3.11'
           architecture: 'x64'
       - bash: ${BUILD_SOURCESDIRECTORY}/Testing/CI/Azure/scripts/mac_build_python.sh
