--- a/Testing/CI/Azure/templates/package-win-job.yml
+++ b/Testing/CI/Azure/templates/package-win-job.yml
@@ -70,6 +70,16 @@ jobs:
       - task: UsePythonVersion@0
         displayName: Enable Python
         inputs:
+          versionSpec: '3.12'
+          architecture: '${{ parameters.PYTHON_ARCH }}'
+      - script: |
+          call  "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat"  ${{ parameters.VCVAR_OPTIONS }}
+          bash $(Build.SourcesDirectory)/Testing/CI/Azure/scripts/win_build_python.sh
+        displayName: Build Python 312
+        continueOnError: true
+      - task: UsePythonVersion@0
+        displayName: Enable Python
+        inputs:
           versionSpec: '3.11'
           architecture: '${{ parameters.PYTHON_ARCH }}'
       - script: |
